Fixing bootstrap in the site so it renders better on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -251,33 +251,17 @@ h3, h2 {
     margin-left: 10px;
 }
 
-
-
-#mapCoverage
-{
-    background-color: #fff;
-}
-
-#mapCoverage h1
-{
-    text-align: left;
-    margin: 0px;
-    padding: 15px;
-    
-}
-
 #testimonials
 {
     background-color:  #a7a9ab ;
     color: #fff;
 }
 
-.quotes
+#quotes
 {
     background-color:#a7a9ab;
-    margin: 0px 100px 0px 100px;
     color: #fff;
-    padding: 30px 0px 30px 0px;
+    padding: 50px 100px;
 }
 
 #testimonials p
@@ -352,103 +336,63 @@ h3, h2 {
 
 #gettingStarted a:hover { text-decoration:underline;}
 
-.started-words
+#video
 {
-    background-color:   #a7a9ab  ;
-    color: #fff;
-    text-align: left;
-    float: left;
-    width: 432px;
-    padding:30px;
+    background-color:#a7a9ab;
 }
 
-.started-video
+#started-words
 {
-    background-color:   #a7a9ab  ;
-    padding: 0px;
+    color: #fff;
+    padding: 30px;
 }
 
 #pricing
 {
     background-color:#a7a9ab;
-    text-align: center;
     padding: 30px 0px 30px 0px;
-}
-
-.containerPrice
-{
-    background-color: ;
-    margin: 0px;
-}
-
-.containerPrice h1
-{
-    padding: 0px;
-    margin: 0px;
 }
 
 #footer
 {
     background-color:  #a6206b;
-    padding: 20px;
+    padding: 30px 0px 0px 0px;
+    margin-bottom: 20px;
 }
 
-.foot
+#info
 {
-    background-color: ;
-}
-
-.info
-{
-    float: left;
-    margin-left: 20px;
-    width: 548px;
-    background-color: ;
     border-right: 4px solid #fff;
 }
 
-.info h1
+#info h1
 {
-    margin: 0px;
-    padding: 0px;
     color: #fff;
-    text-align: left;
-    margin-left: 80px;
+    margin-left: 70px;
 
 }
 
-.info p
+#info p
 {
     color: #fff;
-    text-align: left;
-    margin: 10px 80px 0px 80px;
+    text-align: justify;
+    margin: 10px 80px;
     font-size: 20px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.contact
+#contact h1
 {
-    float: left;
-    
-    background-color: ;
-    
-}
-
-.contact h1
-{
-    margin: 0px;
-    padding: 0px;
     color: #fff;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    text-align: left;
     margin-left: 70px;
 }
 
 ul
 {
     margin: 0px;
-    padding: 10px;
-    background-color:;
+    padding: 0px;
+    line-height: 49px;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
@@ -462,7 +406,7 @@ ul
 {
     text-decoration: none;
     font-size: 20px;
-    margin-left: 50px;
+    margin-left: 80px;
     color: #fff;
     font-weight: lighter;
 }
@@ -481,67 +425,6 @@ ul
     color: #a7a9ab;
     font-weight: lighter;    
     font-size: 32px;
-}
-
-/*
-#mc_embed_signup
-{
-    background-color:#A6206B  ;
-    width: 100%;
-    padding: 10px 0px 10px 0px;
-}
-
-form
-{
-    background-color: ;
-    margin: 0px 100px 20px 100px;
-    text-align: center;
-}
-
-.email
-{
-   padding: 10px;
-   width: 300px;
-   margin-top: 10px;
-   color: #A6206B ;
-   border:none;
-   background-color: #fff;
-}
-
-.button
-{
-   padding: 10px;
-   margin-top: 10px;
-   color: #A6206B ;
-   border:none; 
-   background-color: #fff;
-   border: 1px solid #fff;
-   border-radius: 5px;
-}
-
-#mc_embed_signup_scroll label
-{
-    font-size: 18pt;
-    text-align: center;
-    margin-top: 10px;
-    color:  #fff ;
-    font-weight: 100;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; 
-}
-*/
-
-.white-container
-{
-    
-}
-
-.pink-container
-{
-}
-
-.grey-container
-{
-   background-color: blue;
 }
 
 /* Recent Blog Post*/
@@ -679,4 +562,46 @@ table
     padding: 15px 55px;
     font-size: 20px;
     line-height: 1.42857;
+}
+
+#mc_embed_signup
+{
+    background-color:#A6206B; 
+    margin:30px 0px; 
+    font:14px Helvetica,Arial,sans-serif;
+    text-align: center;
+}
+
+#mc_embed_signup_scroll
+{
+    padding: 20px 0px 10px 0px;
+}
+
+#mc_embed_signup_scroll label
+{
+    font-size: 18pt;
+    color:  #fff ;
+    font-weight: 100;
+    font-family: Helvetica,Arial,sans-serif;
+    padding:0px;
+    margin-bottom: 20px;
+}
+
+.email
+{
+    width:300px; 
+    padding:10px;
+    border:none;
+    border-radius:5px;
+}
+
+.submit
+{
+    width:100px; 
+    background-color:#fff; 
+    color:#A6206B;
+    border:none;
+    border-radius: 5px;
+    padding: 10px;
+    font-family: Helvetica,Arial,sans-serif;
 }
